--- a/templates/results.html
+++ b/templates/results.html
@@ -23,7 +23,8 @@
 
     </div><!-- /.container -->
 
-	<div class="container">
+  <div class="container">
+    <img src="{{ photo_path }}">
 	  <form class="form-inline" role="form">
 	  <div class="form-group">
 	    <label class="sr-only" for="exampleInputEmail2">Phone number</label>
