--- a/templates/results.html
+++ b/templates/results.html
@@ -17,20 +17,30 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Team Purple Project Page</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <h1>Results</h1>
       </div>
 
     </div><!-- /.container -->
 
 	<div class="container">
-	  <form class="form-inline" role="form">
-	  <div class="form-group">
-	    <label class="sr-only" for="exampleInputEmail2">Phone number</label>
-	    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter phone number">
-	  </div>
-	  <button type="submit" class="btn btn-default">Search</button>
-	  </form>
+		<!-- Stack the columns on mobile by making one full-width and the other half-width -->
+		<div class="row">
+		  <div class="col-xs-12 col-md-8">.col-xs-12 .col-md-8</div>
+		  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+		</div>
+
+		<!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
+		<div class="row">
+		  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+		  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+		  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+		</div>
+
+		<!-- Columns are always 50% wide, on mobile and desktop -->
+		<div class="row">
+		  <div class="col-xs-6">.col-xs-6</div>
+		  <div class="col-xs-6">.col-xs-6</div>
+		</div>
 	</div>
 
 
