--- a/templates/purple.html
+++ b/templates/purple.html
@@ -15,7 +15,7 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container input-page">
+    <div class="container widget">
 
       <div class="starter-template">
         <h1>Team Purple Project Page</h1>
@@ -25,12 +25,12 @@
     </div><!-- /.container -->
 
 	<div class="container">
-	  <form class="form-inline" role="form">
+	  <form class="form-inline widget" role="form">
 	  <div class="form-group">
 	    <label class="sr-only" for="exampleInputEmail2">Phone number</label>
 	    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter phone number">
 	  </div>
-	  <button type="submit" class="btn btn-default">Search</button>
+	  <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
 	  </form>
 	</div>
 
