--- a/templates/results.html
+++ b/templates/results.html
@@ -17,32 +17,9 @@
   <body>
     <div class="container">
 
-      <div class="starter-template">
+      <div class="starter-template widget">
         <h1>Results</h1>
       </div>
-
-    </div><!-- /.container -->
-
-	<div class="container">
-		<!-- Stack the columns on mobile by making one full-width and the other half-width -->
-		<div class="row">
-		  <div class="col-xs-12 col-md-8">.col-xs-12 .col-md-8</div>
-		  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
-		</div>
-
-		<!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
-		<div class="row">
-		  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
-		  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
-		  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
-		</div>
-
-		<!-- Columns are always 50% wide, on mobile and desktop -->
-		<div class="row">
-		  <div class="col-xs-6">.col-xs-6</div>
-		  <div class="col-xs-6">.col-xs-6</div>
-		</div>
-    <img src="{{ photo_path }}">
 	  <form class="form-inline" role="form">
 	  <div class="form-group">
 	    <label class="sr-only" for="exampleInputEmail2">Phone number</label>
@@ -50,6 +27,12 @@
 	  </div>
 	  <button type="submit" class="btn btn-default">Search</button>
 	  </form>
+    </div><!-- /.container -->
+
+	<div class="container widget">
+	  <div class="row">
+	    <div class="col-xs-12"><img src="{{ photo_path }}"></div>
+      </div>
 	</div>
 
 
