--- a/templates/results.html
+++ b/templates/results.html
@@ -6,6 +6,7 @@
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/app.css" rel="stylesheet">
+    <link href="/static/css/nv.d3.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -40,6 +41,18 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/static/js/bootstrap.min.js"></script>
+	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="/static/js/nv.d3.js"></script>
+	<script>
+	/*
+	var createTimeline = function(data) {
+	  
+	};
+
+	$.getJSON( "ajax/test.json", function( data ) {
+	  var items = [];
+	});*/
+	</script>
   </body>
 </html>
 
