--- a/templates/purple.html
+++ b/templates/purple.html
@@ -25,10 +25,10 @@
     </div><!-- /.container -->
 
 	<div class="container">
-	  <form class="form-inline widget" role="form">
+    <form class="form-inline widget" role="form" action="{{ url_for('view') }}" method="post">
 	  <div class="form-group">
-	    <label class="sr-only" for="exampleInputEmail2">Phone number</label>
-	    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter phone number">
+	    <label class="sr-only" for="phone_number">Phone number</label>
+	    <input type="text" class="form-control" name="phone_number" placeholder="Enter phone number">
 	  </div>
 	  <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
 	  </form>
