--- a/templates/results.html
+++ b/templates/results.html
@@ -18,12 +18,12 @@
     <div class="container">
 
       <div class="starter-template widget">
-        <h1>Results</h1>
+        <h1>Results for {{ phone_number }}</h1>
       </div>
-	  <form class="form-inline" role="form">
+	  <form class="form-inline" role="form" action="" method="post">
 	  <div class="form-group">
-	    <label class="sr-only" for="exampleInputEmail2">Phone number</label>
-	    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter phone number">
+	    <label class="sr-only" for="phone_number">Phone number</label>
+	    <input type="text" class="form-control" name="phone_number" placeholder="Enter phone number">
 	  </div>
 	  <button type="submit" class="btn btn-default">Search</button>
 	  </form>
