Display most recent WhatsApp activity for number

--- a/templates/results.html
+++ b/templates/results.html
@@ -20,6 +20,7 @@
 
       <div class="starter-template widget">
         <h1>Results for {{ phone_number }}</h1>
+        <h2>Last active on WhatsApp at {{ last_time }}</h2>
       </div>
 	  <form class="form-inline" role="form" action="" method="post">
 	  <div class="form-group">
