Intro text on starter page
Needs some work, but it's a start....

--- a/templates/purple.html
+++ b/templates/purple.html
@@ -16,12 +16,13 @@
   </head>
   <body>
     <div class="container widget">
-
       <div class="starter-template">
-        <h1>Team Purple Project Page</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
+        <h1>Revealed</h1>
+        <p class="lead">What you didn't know could be found from just your phone number.</p>
 
+        <p>Every time you sign up for an online service like WhatsApp or Facebook, you provide lots of personal information: name, email address, sometimes your phone number, picture, and more. Most users don't think twice before filling out this information. But every time you submit personal details, do you think about who will be able to view them?</p>
+        <p>Some services like WhatsApp don't have any privacy controls, so the information you provide is always public. Other services like Facebook have privacy controls that default to public, so the information is made public until you choose otherwise. Individually, these services might not expose too many personal details, but in aggregate, they can reveal a shockingly large collection of facts.</p>
+      </div>
     </div><!-- /.container -->
 
 	<div class="container">
@@ -34,6 +35,10 @@
 	  </form>
 	</div>
 
+  <div class="container widget">
+    <h2>What can I do about it?</h2>
+    <p>TODO</p>
+  </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
