Proof-of-concept for loading data from multiple sources
The previous version of the site hit one endpoint in Python, then only after
receiving this data, loaded the proper HTML template. This is bad -- if you're
hitting multiple endpoints, you need to wait for them all to return before
showing anything!

I changed the page to initially load with no data (just loading
spinners/indicators), then use AJAX to fill in each part as the endpoint
returns the data.

This is just a proof of concept. It's ugly and there are tons of bugs (namely,
if an endpoint fails to return data, I don't check/handle that properly).
However, I think it's a good base to build off of.

--- a/templates/reverse_image.html
+++ b/templates/reverse_image.html
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery.js"></script>
 
     <script type="text/javascript">
-      var endpoint_url = "{{ endpoint_url }}";
+      var endpoint_url = "{{ url_for('reverse_image_endpoint') }}";
 
       showResults = function(data) {
         $('#resultsFrame').html(data);
@@ -19,6 +19,8 @@
       $(document).ready(function() {
         $.ajax({
           url: endpoint_url,
+          type: 'POST',
+          data: {'local_image_path': '{{ local_image_path}}' },
           success: showResults,
         });
       });
