more styling and logo

--- a/templates/purple.html
+++ b/templates/purple.html
@@ -17,12 +17,9 @@
   <body>
     <div class="container widget">
       <div class="starter-template">
-        <h1>Revealed</h1>
-        <p class="lead">What you didn't know could be found from just your phone number.</p>
-
-        <p>Every time you sign up for an online service like WhatsApp or Facebook, you provide lots of personal information: name, email address, sometimes your phone number, picture, and more. Most users don't think twice before filling out this information. But every time you submit personal details, do you think about who will be able to view them?</p>
-        <p>Some services like WhatsApp don't have any privacy controls, so the information you provide is always public. Other services like Facebook have privacy controls that default to public, so the information is made public until you choose otherwise. Individually, these services might not expose too many personal details, but in aggregate, they can reveal a shockingly large collection of facts.</p>
-      </div>
+        <h1><span style="font-size: 175%">revealed</span><span style="color: gray">.co</span></h1>
+        <p class="lead" style="margin-top:-17px">What you didn't know your phone number could reveal.</p>
+     </div>
     </div><!-- /.container -->
 
 	<div class="container">
@@ -36,6 +33,8 @@
 	</div>
 
   <div class="container widget">
+      <p>Every time you sign up for an online service like WhatsApp or Facebook, you provide lots of personal information: name, email address, sometimes your phone number, picture, and more. Most users don't think twice before filling out this information. But every time you submit personal details, do you think about who will be able to view them?</p>
+      <p>Some services like WhatsApp don't have any privacy controls, so the information you provide is always public. Other services like Facebook have privacy controls that default to public, so the information is made public until you choose otherwise. Individually, these services might not expose too many personal details, but in aggregate, they can reveal a shockingly large collection of facts.</p>
     <h2>What can I do about it?</h2>
     <p>TODO</p>
   </div>
