--- a/templates/results.html
+++ b/templates/results.html
@@ -134,7 +134,8 @@
     <div class="container">
 
       <div class="starter-template widget header">
-        <h1><a href="/" target="_blank">Revealed</a></h1>
+        <h1><a href="/" target="_blank"><span style="font-size: 175%">revealed</span><span style="color: gray">.co</span></a></h1>
+        <p class="lead" style="margin-top:-17px">What you didn't know your phone number could reveal.</p>
         <h2>Results for {{ phone_number }}</h2>
       </div>
 
