--- a/templates/purple.html
+++ b/templates/purple.html
@@ -17,7 +17,13 @@
   <body>
     <div class="container widget">
       <div class="starter-template">
-        <h1><span style="font-size: 175%">revealed</span><span style="color: gray">.co</span></h1>
+        <h1>
+          <span class="glyphicon glyphicon-eye-open"></span>
+          <span style="font-size: 175%">
+            revealed
+          </span>
+          <span style="color: gray">.co</span>
+        </h1>
         <p class="lead" style="margin-top:-17px">What you didn't know your phone number could reveal.</p>
      </div>
     </div><!-- /.container -->
@@ -26,23 +32,50 @@
     <form class="form-inline widget" role="form" action="{{ url_for('view') }}" method="post">
 	  <div class="form-group">
 	    <label class="sr-only" for="phone_number">Phone number</label>
-	    <input type="text" class="form-control" name="phone_number" placeholder="Enter phone number">
+	    <input type="text" class="form-control phone-input" name="phone_number" placeholder="Enter phone number">
 	  </div>
 	  <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
 	  </form>
 	</div>
 
-  <div class="container widget">
-      <p>Every time you sign up for an online service like WhatsApp or Facebook, you provide lots of personal information: name, email address, sometimes your phone number, picture, and more. Most users don't think twice before filling out this information. But every time you submit personal details, do you think about who will be able to view them?</p>
-      <p>Some services like WhatsApp don't have any privacy controls, so the information you provide is always public. Other services like Facebook have privacy controls that default to public, so the information is made public until you choose otherwise. Individually, these services might not expose too many personal details, but in aggregate, they can reveal a shockingly large collection of facts.</p>
-    <h2>What can I do about it?</h2>
-    <p>TODO</p>
+  <div class="container" style="text-align: center; margin-top: 150px;">
+    <button type="button" class="btn btn-primary btn-lg btn-tell-me">
+      <span class="glyphicon glyphicon-info-sign"></span>
+      Tell me More!
+    </button>
   </div>
+
+    <div class="modal fade modal-more">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title">What is This?</h4>
+          </div>
+          <div class="modal-body">
+            <p>Every time you sign up for an online service like WhatsApp or Facebook, you provide lots of personal information: name, email address, sometimes your phone number, picture, and more. Most users don't think twice before filling out this information. But every time you submit personal details, do you think about who will be able to view them?</p>
+          <p>Some services like WhatsApp don't have any privacy controls, so the information you provide is always public. Other services like Facebook have privacy controls that default to public, so the information is made public until you choose otherwise. Individually, these services might not expose too many personal details, but in aggregate, they can reveal a shockingly large collection of facts.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/static/js/bootstrap.min.js"></script>
+    <script>
+    $(function() {
+      $('.phone-input').focus();
+      $('.modal-more').modal({show: false});
+      $('.btn-tell-me').on('click', function() {
+        $('.modal-more').modal('show');
+      });
+    });
+    </script>
   </body>
 </html>
 
