--- a/templates/results.html
+++ b/templates/results.html
@@ -118,6 +118,8 @@
                 $("#facebook #fbname").text(data.name);
                 $("#facebook #fbusername").text(data.username);
                 $("#facebook #fbgender").text(data.gender);
+                if ('url' in data)
+                  $('#facebook #url').attr('src', data['url']);
                 $('#facebook').removeClass('querying').addClass('done');
               } else {
                 fail_cb();
@@ -195,6 +197,7 @@
         <h2>Facebook ID: <span id="fbid" /></h2>
         <h2>Facebook login: <span id="fbusername" /></h2>
         <h2>Gender: <span id="fbgender" /></h2>
+        <img id="url" src="" />
       </div>
     </div>
 
