added x axis label

--- a/templates/results.html
+++ b/templates/results.html
@@ -251,9 +251,9 @@
 		// initialize graph itself
 		nv.addGraph(function() {
 
-		var chart = nv.models.discreteBarChart()
+	   	  var chart = nv.models.discreteBarChart()
 		      .x(function(d) { return d.x })
-		      .staggerLabels(true)
+		      .staggerLabels(false)
 		      .tooltips(true)
 			  .color(['white']);
 		  chart.xAxis.axisLabel('Hour');
@@ -268,6 +268,7 @@
 		      .style("fill", function(d, i){
 	              return "white";
 		      });
+
 		  nv.utils.windowResize(chart.update);
           return chart;
 
@@ -281,7 +282,7 @@
 	</script>
 	<style>
 	  #chart svg {
-	    height: 400px;
+	    height: 300px;
 	  }
 	  .nv-y text{
 	      display: none;
