--- a/templates/results.html
+++ b/templates/results.html
@@ -25,7 +25,7 @@
         border-radius: 75px;
         background-color: #8977A3;
         text-align: center;
-        padding-top: 46px;
+        padding-top: 55px;
         margin: auto;
         margin-top: 20px;
       }
@@ -160,9 +160,15 @@
     <div class="container">
 
       <div class="starter-template widget header">
-        <h1><a href="/" target="_blank"><span style="font-size: 175%">revealed</span><span style="color: gray">.co</span></a></h1>
+        <h1>
+          <span class="glyphicon glyphicon-eye-open"></span>
+          <span style="font-size: 175%">
+            revealed
+          </span>
+          <span style="color: gray">.co</span>
+        </h1>
         <p class="lead" style="margin-top:-17px">What you didn't know your phone number could reveal.</p>
-        <h2>Results for {{ phone_number }}</h2>
+        <h2>Results for {{ phone_number }} <a href="/" class="btn btn-primary">try another one</a></h2>
       </div>
 
     <!-- We only expect each user to search once (total), so no need to show the form again
@@ -174,34 +180,49 @@
 	  <button type="submit" class="btn btn-default">Search</button>
 	  </form>
 	-->
-	  <div id="chart">
-	    <svg></svg>
-	  </div>
-    </div><!-- /.container -->
 
-  	<div class="container widget querying" id="whatsApp">
+    <div class="container widget querying" id="whatsApp">
       <div class="loading"><span class="glyphicon glyphicon-refresh"></span></div>
       <div class="loaded">
-        <h2>Last active on WhatsApp at <span id="last_time" /></h2>
+        <h3>Last active on WhatsApp at <span id="last_time" /></h3>
         <div class="col-xs-12"><img id="photo_path" src="" /></div>
       </div>
     </div>
 
+    <div class="container widget">
+  	  <div id="chart">
+  	    <svg></svg>
+  	  </div>
+    </div>
+    </div><!-- /.container -->
+
     <div class="container widget querying" id="facebook">
       <div class="loading"><span class="glyphicon glyphicon-refresh"></span></div>
       <div class="loaded">
-        <h1>Facebook</h1>
-        <h2>Name: <span id="fbname" /></h2>
-        <h2>Facebook ID: <span id="fbid" /></h2>
-        <h2>Facebook login: <span id="fbusername" /></h2>
-        <h2>Gender: <span id="fbgender" /></h2>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Facebook Information</h3>
+          </div>
+          <div class="panel-body">
+            <h5>Name: <span id="fbname" /></h5>
+            <h5>Facebook ID: <span id="fbid" /></h5>
+            <h5>Facebook login: <span id="fbusername" /></h5>
+            <h5>Gender: <span id="fbgender" /></h5>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="container querying" id="reverseImage">
+    <div class="container widget querying" id="reverseImage">
       <div class="loading"><span class="glyphicon glyphicon-refresh"></span></div>
       <div class="loaded">
-        <div class="container" id="resultsFrame">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Google Reverse Image Lookup</h3>
+          </div>
+          <div class="panel-body">
+            <div id="resultsFrame">
+          </div>
         </div>
       </div>
     </div>
