--- a/templates/results.html
+++ b/templates/results.html
@@ -85,15 +85,16 @@
           dataType: 'json',
           success: function(data) {
             // TODO if they don't have a WhatsApp, the first half of this div still appears (just no time filled in)
-            if ('last_time' in data && data['last_time'] != "None")
-              $('#whatsApp #last_time').text(new Date(data['last_time'] * 1000));
-            if ('photo_path' in data)
+            if ('photo_path' in data && data['photo_path'] != null) {
               $('#whatsApp #photo_path').attr('src', data['photo_path']);
-            $('#whatsApp').removeClass('querying').addClass('done');
-
-            if ('photo_path' in data)
+              if ('last_time' in data && data['last_time'] != null)
+                $('#whatsApp #last_time').text(new Date(data['last_time'] * 1000));
+              $('#whatsApp').removeClass('querying').addClass('done');
               start_reverse_image(data['photo_path']);
-            // bug: in the else branch, we end up showing the loading spinner in #reverseImage forever
+            } else {
+              $('#whatsApp').removeClass('querying').addClass('hidden');
+              $('#reverseImage').removeClass('querying').addClass('hidden');
+            }
           },
         });
 
@@ -113,23 +114,38 @@
             data: {'phone_number': phone},
             dataType: 'json',
             success: function(data) {
-              if (data != "None") {
+              if ('id' in data)
                 $("#facebook #fbid").text(data.id);
+              else
+                $("#facebook #spanid").addClass('hidden');
+
+              if ('name' in data)
                 $("#facebook #fbname").text(data.name);
+              else
+                $("#facebook #spanname").addClass('hidden');
+
+              if ('username' in data)
                 $("#facebook #fbusername").text(data.username);
+              else
+                $("#facebook #spanusername").addClass('hidden');
+
+              if ('gender' in data)
                 $("#facebook #fbgender").text(data.gender);
-                if ('url' in data)
-                  $('#facebook #url').attr('src', data['url']);
-                $('#facebook').removeClass('querying').addClass('done');
-              } else {
-                fail_cb();
-              }
+              else
+                $("#facebook #spangender").addClass('hidden');
+
+              if ('url' in data)
+                $("#facebook #fbimgurl").attr('src', data.url);
+              else
+                $("#facebook #fbimgurl").addClass('hidden');
+
+              $('#facebook').removeClass('querying').addClass('done');
             },
             error: fail_cb,
           });
         };
         no_facebook = function() {
-          $('#facebook').removeClass('querying');
+          $('#facebook').removeClass('querying').addClass('hidden');
         };
         try_second_phone = function() {
           try_phone(alt_phone_number, no_facebook);
@@ -176,10 +192,11 @@
 	  <button type="submit" class="btn btn-default">Search</button>
 	  </form>
 	-->
-	  <div id="chart">
-	    <svg></svg>
-	  </div>
     </div><!-- /.container -->
+
+    <div id="chart">
+      <svg></svg>
+    </div>
 
   	<div class="container widget querying" id="whatsApp">
       <div class="loading"><span class="glyphicon glyphicon-refresh"></span></div>
@@ -193,11 +210,11 @@
       <div class="loading"><span class="glyphicon glyphicon-refresh"></span></div>
       <div class="loaded">
         <h1>Facebook</h1>
-        <h2>Name: <span id="fbname" /></h2>
-        <h2>Facebook ID: <span id="fbid" /></h2>
-        <h2>Facebook login: <span id="fbusername" /></h2>
-        <h2>Gender: <span id="fbgender" /></h2>
-        <img id="url" src="" />
+        <h2 id="spanname">Name: <span id="fbname" /></h2>
+        <h2 id="spanid">Facebook ID: <span id="fbid" /></h2>
+        <h2 id="spanusername">Facebook login: <span id="fbusername" /></h2>
+        <h2 id="spangender">Gender: <span id="fbgender" /></h2>
+        <img id="fbimgurl" src="" />
       </div>
     </div>
 
@@ -278,10 +295,15 @@
 		})};
 
 
-    $.getJSON( "/timeline?phone=" + {{ phone_number }}, function( data ) {
-	  console.log(createBuckets(data.data));
-	  createTimeline(createBuckets(data.data));
-	});
+    $.ajax({
+      url: "/timeline?phone=" + {{ phone_number }},
+      success: function( data ) {
+    	  createTimeline(createBuckets(data.data));
+      },
+      error: function( data ) {
+        $("#chart").hide();
+      },
+  	});
 	</script>
 	<style>
 	  #chart svg {
