--- a/templates/results.html
+++ b/templates/results.html
@@ -68,7 +68,7 @@
         padding-bottom: 12px;
       }
       #reverseImage #resultsFrame #name-match .google-qb-bmqc a {
-        color: #FF44FF;
+        color: gray;
       }
       .header h1 a {
         color: white;
