--- a/templates/purple.html
+++ b/templates/purple.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>revealed.co</title>
+    <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
